--- a/src/Security/Templates/registration/resend_confirmation_email.html.twig
+++ b/src/Security/Templates/registration/resend_confirmation_email.html.twig
@@ -14,22 +14,27 @@
             <div class="col-lg-6 col-md-8 col-sm-10">
                 <div class="auth-card">
                     <div class="auth-header">
-                        <h2>
-                            {{ 'resend_confirmation_email.your_account_is_unverified'|trans({}, 'front') }}
-                        </h2>
-                        <p class="auth-subtitle">{{ 'resend_confirmation_email.check_your_email_inbox'|trans({}, 'front') }}</p>
-                    </div>
-                    <div class="card-body p-4">
-                        <p class="fs-5">
-                            {{ 'resend_confirmation_email.description'|trans({}, 'front') }}
-                        </p>
-                        <a href="{{ path('app_resend_confirm_email', {'userId': userId}) }}" class="btn auth-btn block-button-js" data-storage-key="email-confirmation-button-blockade">
-                            {{ 'resend_confirmation_email.resend_button'|trans({}, 'front') }}
-                        </a>
+                            <h1 class="auth-title">
+                                <i class="fas fa-envelope"></i> {{ 'resend_confirmation_email.your_account_is_unverified'|trans({}, 'front') }}
+                            </h1>
+                            <p class="auth-subtitle">{{ 'resend_confirmation_email.check_your_email_inbox'|trans({}, 'front') }}</p>
+                        </div>
+                        
+                        <div class="auth-form-container">
+                            <div class="mb-4 p-3 bg-warning text-dark rounded">
+                                <i class="fas fa-exclamation-triangle me-2"></i>
+                                {{ 'resend_confirmation_email.description'|trans({}, 'front') }}
+                            </div>
+                            
+                            <a href="{{ path('app_resend_confirm_email', {'userId': userId}) }}" 
+                               class="btn auth-btn block-button-js" 
+                               data-storage-key="email-confirmation-button-blockade">
+                                <i class="fas fa-paper-plane"></i> {{ 'resend_confirmation_email.resend_button'|trans({}, 'front') }}
+                            </a>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-</div>
 {% endblock %}
